lighthouse and html validator

--- a/12-profile-card/index.html
+++ b/12-profile-card/index.html
@@ -15,10 +15,11 @@
   </head>
   <body>
     <main class="hero">
-      <img src="images/bg-pattern-top.svg" class="hero__pattern pattern--top" />
+
+      <img src="images/bg-pattern-top.svg" class="hero__pattern pattern--top" alt="" />
       <article class="hero__card">
         <img src="images/bg-pattern-card.svg" alt="" class="card__background" />
-        <img src="images/image-victor.jpg" alt="" class="card__img" />
+        <img src="images/image-victor.jpg" alt="vikctor Creset profile image" class="card__img" width="105" height="105" />
         <div class="card__content">
           <h2 class="card__heading">Victor Crest</h2>
           <p class="card__age">26</p>
@@ -39,7 +40,7 @@
           </div>
         </div>
       </article>
-      <img src="images/bg-pattern-bottom.svg" class="hero__pattern pattern--bottom" />
+      <img src="images/bg-pattern-bottom.svg" class="hero__pattern pattern--bottom" alt="" />
     </main>
   </body>
 </html>
