--- a/12-profile-card/index.html
+++ b/12-profile-card/index.html
@@ -14,8 +14,9 @@
     <title>Frontend Mentor | Profile card component</title>
   </head>
   <body>
-    <main class="hero">
 
+    <main class="hero">
+      <h1 class="sr-only">Profile Card</h1>
       <img src="images/bg-pattern-top.svg" class="hero__pattern pattern--top" alt="" />
       <article class="hero__card">
         <img src="images/bg-pattern-card.svg" alt="" class="card__background" />
