--- a/13-faq-accordion/index.html
+++ b/13-faq-accordion/index.html
@@ -9,10 +9,46 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
     <title>Frontend Mentor | FAQ Accordion Card</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- How many team members can I invite? You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan. What is the maximum file upload size? No more than 2GB. All files in your account must fit your allotted storage space. How do I reset my password? Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you. Can I cancel my subscription? Yes! Send us a message and we’ll process your request no questions asked. Do you provide additional support? Chat and email support is available 24/7. Phone lines are open during normal business hours. -->
+    <main>
+      <article class="faq">
+        <img src="images/illustration-woman-online-mobile.svg" alt="" class="faq__img" />
 
+        <div class="faq__content">
+          <h1 class="faq__heading">FAQ</h1>
+          <details class="faq__details">
+            <summary class="details__summary">How many team members can I invite?</summary>
+            <p class="details__text"></p>
+            You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.
+          </details>
+
+          <details class="faq__details" open>
+            <summary class="details__summary">What is the maximum file upload size?</summary>
+            <p class="details__text"></p>
+            No more than 2GB. All files in your account must fit your allotted storage space.
+          </details>
+
+          <details class="faq__details">
+            <summary class="details__summary">How do I reset my password?</summary>
+            <p class="details__text"></p>
+            Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.
+          </details>
+
+          <details class="faq__details">
+            <summary class="details__summary">Can I cancel my subscription?</summary>
+            <p class="details__text"></p>
+            Yes! Send us a message and we'll process your request no questions asked.
+          </details>
+
+          <details class="faq__details">
+            <summary class="details__summary">Do you provide additional support?</summary>
+            <p class="details__text"></p>
+            Chat and email support is available 24/7. Phone lines are open during normal business hours.
+          </details>
+        </div>
+      </article>
+    </main>
   </body>
 </html>
