--- a/13-faq-accordion/index.html
+++ b/13-faq-accordion/index.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
     <title>Frontend Mentor | FAQ Accordion Card</title>
+    <script src="https://kit.fontawesome.com/75016b0d3c.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -18,35 +20,41 @@
 
         <div class="faq__content">
           <h1 class="faq__heading">FAQ</h1>
-          <details class="faq__details">
-            <summary class="details__summary">How many team members can I invite?</summary>
-            <p class="details__text"></p>
-            You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.
-          </details>
 
-          <details class="faq__details" open>
-            <summary class="details__summary">What is the maximum file upload size?</summary>
-            <p class="details__text"></p>
-            No more than 2GB. All files in your account must fit your allotted storage space.
-          </details>
+          <div class="faq__accordion">
+            <i class="fa-solid fa-angle-up"></i>
+            <h3 class="accordion__heading">How many team members can i invite?</h3>
+            <p class="accordion__content">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
+            <i class="fa-solid fa-angle-down"></i>
+          </div>
 
-          <details class="faq__details">
-            <summary class="details__summary">How do I reset my password?</summary>
-            <p class="details__text"></p>
-            Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.
-          </details>
+          <div class="faq__accordion">
+            <i class="fa-solid fa-angle-up"></i>
+            <h3 class="accordion__heading">What is the maximum file upload size?</h3>
+            <p class="accordion__content">No more than 2GB. All files in your account must fit your allotted storage space.</p>
+            <i class="fa-solid fa-angle-down"></i>
+          </div>
 
-          <details class="faq__details">
-            <summary class="details__summary">Can I cancel my subscription?</summary>
-            <p class="details__text"></p>
-            Yes! Send us a message and we'll process your request no questions asked.
-          </details>
+          <div class="faq__accordion">
+            <i class="fa-solid fa-angle-up"></i>
+            <h3 class="accordion__heading">How do I reset my password?</h3>
+            <p class="accordion__content">Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
+            <i class="fa-solid fa-angle-down"></i>
+          </div>
 
-          <details class="faq__details">
-            <summary class="details__summary">Do you provide additional support?</summary>
-            <p class="details__text"></p>
-            Chat and email support is available 24/7. Phone lines are open during normal business hours.
-          </details>
+          <div class="faq__accordion">
+            <i class="fa-solid fa-angle-up"></i>
+            <h3 class="accordion__heading">Can I cancel my subscription?</h3>
+            <p class="accordion__content">Yes! Send us a message and we'll process your request no questions asked.</p>
+            <i class="fa-solid fa-angle-down"></i>
+          </div>
+
+          <div class="faq__accordion">
+            <i class="fa-solid fa-angle-up"></i>
+            <h3 class="accordion__heading">Do you provide additional support?</h3>
+            <p class="accordion__content">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+            <i class="fa-solid fa-angle-down"></i>
+          </div>
         </div>
       </article>
     </main>
