finish javascript logic

--- a/13-faq-accordion/index.html
+++ b/13-faq-accordion/index.html
@@ -22,16 +22,17 @@
           <h1 class="faq__heading">FAQ</h1>
 
           <div class="faq__accordion">
-            <i class="fa-solid fa-angle-up"></i>
+            <i class="fa-solid fa-angle-down"></i>
             <h3 class="accordion__heading">How many team members can i invite?</h3>
             <p class="accordion__content">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
-            <i class="fa-solid fa-angle-down"></i>
+ 
+            <i class="fa-solid fa-angle-up"></i>
           </div>
 
           <div class="faq__accordion">
             <i class="fa-solid fa-angle-up"></i>
-            <h3 class="accordion__heading">What is the maximum file upload size?</h3>
-            <p class="accordion__content">No more than 2GB. All files in your account must fit your allotted storage space.</p>
+            <h3 class="accordion__heading open">What is the maximum file upload size?</h3>
+            <p class="accordion__content show">No more than 2GB. All files in your account must fit your allotted storage space.</p>
             <i class="fa-solid fa-angle-down"></i>
           </div>
 
@@ -58,5 +59,7 @@
         </div>
       </article>
     </main>
+
+    <script src="app.js"></script>
   </body>
 </html>
