fix image on mobile screen

--- a/13-faq-accordion/index.html
+++ b/13-faq-accordion/index.html
@@ -16,7 +16,8 @@
   <body>
     <main>
       <article class="faq">
-        <img src="images/illustration-woman-online-mobile.svg" alt="" class="faq__img" />
+        <img src="images/illustration-woman-online-mobile.svg" alt="" class="faq__img" width="237" height="180"/>
+        <img src="images/bg-pattern-mobile.svg" alt="" class="faq__pattern">
 
         <div class="faq__content">
           <h1 class="faq__heading">FAQ</h1>
