finish desktop design

--- a/13-faq-accordion/index.html
+++ b/13-faq-accordion/index.html
@@ -15,9 +15,22 @@
   </head>
   <body>
     <main>
+
+
       <article class="faq">
-        <img src="images/illustration-woman-online-mobile.svg" alt="" class="faq__img" width="237" height="180"/>
-        <img src="images/bg-pattern-mobile.svg" alt="" class="faq__pattern">
+        <img src="images/illustration-woman-online-mobile.svg" alt="" class="faq__img img--mobile" width="237" height="180" />
+
+        <img src="images/bg-pattern-mobile.svg" alt="" class="faq__pattern pattern--mobile" />
+        <img src="" alt="" />
+
+        <div class="image__container">
+          <img src="images/illustration-woman-online-desktop.svg" alt="" class="faq__img img--desktop" />
+          <img src="images/bg-pattern-desktop.svg" alt="" class="faq__pattern pattern--desktop" />
+        </div>
+
+
+      
+        <img src="images/illustration-box-desktop.svg" alt="" class="faq__pattern pattern--box" />
 
         <div class="faq__content">
           <h1 class="faq__heading">FAQ</h1>
@@ -26,7 +39,7 @@
             <i class="fa-solid fa-angle-down"></i>
             <h3 class="accordion__heading">How many team members can i invite?</h3>
             <p class="accordion__content">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
- 
+
             <i class="fa-solid fa-angle-up"></i>
           </div>
 
