--- a/14-social-proof/index.html
+++ b/14-social-proof/index.html
@@ -8,11 +8,64 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
     <title>Frontend Mentor | Social Proof Section</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- 10,000+ of our users love our products. We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services. Rated 5 Stars in Reviews Rated 5 Stars in Report Guru Rated 5 Stars in BestTech Colton Smith Verified Buyer "We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!" Irene Roberts Verified Buyer "Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery." Anne Wallace Verified Buyer "Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!" -->
+    <main class="hero">
+      <div class="hero__content">
+        <h1 class="hero__heading">10,000+ of our users love our products</h1>
+        <p class="hero__text">We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
+      </div>
+      <div class="hero__rating">
+        <div class="rate__row">
+          <p class="rate__stars">* * * *</p>
+          <p class="rate__info">Rated 5 Stars in Reviews</p>
+        </div>
+        <div class="rate__row">
+          <p class="rate__stars">* * * *</p>
+          <p class="rate__info">Rated 5 Stars in Report Guru</p>
+        </div>
+        <div class="rate__row">
+          <p class="rate__stars">* * * *</p>
+          <p class="rate__info">Rated 5 Stars in BestTech Colton</p>
+        </div>
+      </div>
 
-   
+      <section class="cards">
+        <div class="card">
+          <div class="card__content">
+            <img src="" alt="" class="card__img" />
+            <div class="card__info">
+              <h2 class="card__name">Colton Smith</h2>
+              <p class="card__verified">Verified Buyer</p>
+            </div>
+          </div>
+          <div class="card__text">"We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"</div>
+        </div>
+
+        <div class="card">
+          <div class="card__content">
+            <img src="" alt="" class="card__img" />
+            <div class="card__info">
+              <h2 class="card__name">Irene Roberts</h2>
+              <p class="card__verified">Verified Buyer</p>
+            </div>
+          </div>
+          <div class="card__text">"Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."</div>
+        </div>
+
+        <div class="card">
+          <div class="card__content">
+            <img src="" alt="" class="card__img" />
+            <div class="card__info">
+              <h2 class="card__name">Anne Wallace</h2>
+              <p class="card__verified">Verified Buyer</p>
+            </div>
+          </div>
+          <div class="card__text">"Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"</div>
+        </div>
+      </section>
+    </main>
+  
   </body>
 </html>
