hero section mobile design

--- a/14-social-proof/index.html
+++ b/14-social-proof/index.html
@@ -51,7 +51,7 @@
             <img src="images/icon-star.svg" alt="" class="rate__star">
             <img src="images/icon-star.svg" alt="" class="rate__star">
           </div>
-          <p class="rate__info">Rated 5 Stars in BestTech Colton</p>
+          <p class="rate__info">Rated 5 Stars in BestTech</p>
         </div>
     </section>
     </div>
