finish responsive design

--- a/14-social-proof/index.html
+++ b/14-social-proof/index.html
@@ -59,38 +59,41 @@
     <section class="cards">
       <div class="card">
         <div class="card__content">
-          <img src="" alt="" class="card__img" />
+          <img src="images/image-colton.jpg" alt="" class="card__img" />
           <div class="card__info">
             <h2 class="card__name">Colton Smith</h2>
             <p class="card__verified">Verified Buyer</p>
           </div>
         </div>
-        <div class="card__text">"We needed the same printed design as the one we had ordered a week prior. Not only did
-          they find the original order, but we also received it in time. Excellent!"</div>
+        <div class="card__text">&#8220; We needed the same printed design as the one we had ordered a week prior. Not
+          only did
+          they find the original order, but we also received it in time. Excellent! &rdquo;</div>
       </div>
 
       <div class="card">
         <div class="card__content">
-          <img src="" alt="" class="card__img" />
+          <img src="images/image-irene.jpg" alt="" class="card__img" />
           <div class="card__info">
             <h2 class="card__name">Irene Roberts</h2>
             <p class="card__verified">Verified Buyer</p>
           </div>
         </div>
-        <div class="card__text">"Customer service is always excellent and very quick turn around. Completely delighted
-          with the simplicity of the purchase and the speed of delivery."</div>
+        <div class="card__text">&#8220; Customer service is always excellent and very quick turn around. Completely
+          delighted
+          with the simplicity of the purchase and the speed of delivery. &rdquo;</div>
       </div>
 
       <div class="card">
         <div class="card__content">
-          <img src="" alt="" class="card__img" />
+          <img src="images/image-anne.jpg" alt="" class="card__img" />
           <div class="card__info">
             <h2 class="card__name">Anne Wallace</h2>
             <p class="card__verified">Verified Buyer</p>
           </div>
         </div>
-        <div class="card__text">"Put an order with this company and can only praise them for the very high standard.
-          Will definitely use them again and recommend them to everyone!"</div>
+        <div class="card__text">&#8220; Put an order with this company and can only praise them for the very high
+          standard.
+          Will definitely use them again and recommend them to everyone! &rdquo;</div>
       </div>
     </section>
   </main>
