lighthouse, HTML validator, and axe tests

--- a/14-social-proof/index.html
+++ b/14-social-proof/index.html
@@ -24,42 +24,44 @@
         <div class="rate__row">
 
           <div class="rate__stars">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
           </div>
 
           <p class="rate__info">Rated 5 Stars in Reviews</p>
         </div>
         <div class="rate__row">
           <div class="rate__stars">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
           </div>
           <p class="rate__info">Rated 5 Stars in Report Guru</p>
         </div>
         <div class="rate__row">
           <div class="rate__stars">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
-            <img src="images/icon-star.svg" alt="" class="rate__star">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
+            <img src="images/icon-star.svg" alt="" class="rate__star" width="17" height="16">
           </div>
           <p class="rate__info">Rated 5 Stars in BestTech</p>
         </div>
+      </div>
     </section>
-    </div>
+
 
     <section class="cards">
       <div class="card">
         <div class="card__content">
-          <img src="images/image-colton.jpg" alt="" class="card__img" />
+          <img src="images/image-colton.jpg" alt="Colton Smith profile picture" class="card__img" width="40"
+            height="40" />
           <div class="card__info">
             <h2 class="card__name">Colton Smith</h2>
             <p class="card__verified">Verified Buyer</p>
@@ -72,7 +74,8 @@
 
       <div class="card">
         <div class="card__content">
-          <img src="images/image-irene.jpg" alt="" class="card__img" />
+          <img src="images/image-irene.jpg" alt="Irene Roberts profile picture" class="card__img" width="40"
+            height="40" />
           <div class="card__info">
             <h2 class="card__name">Irene Roberts</h2>
             <p class="card__verified">Verified Buyer</p>
@@ -85,7 +88,8 @@
 
       <div class="card">
         <div class="card__content">
-          <img src="images/image-anne.jpg" alt="" class="card__img" />
+          <img src="images/image-anne.jpg" alt="Anna wallance profile picture" class="card__img" width="40"
+            height="40" />
           <div class="card__info">
             <h2 class="card__name">Anne Wallace</h2>
             <p class="card__verified">Verified Buyer</p>
