--- a/15-article-preview/index.html
+++ b/15-article-preview/index.html
@@ -8,23 +8,55 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+  <script src="https://kit.fontawesome.com/75016b0d3c.js" crossorigin="anonymous"></script>
+
   <title>Frontend Mentor | Article preview component</title>
 
- 
+
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <!-- Shift the overall look and feel by adding these wonderful
-  touches to furniture in your home
+  <main>
+    <article class="article">
+      <img src="images/drawers.jpg" alt="" class="article__img">
+      <div class="article__content">
+        <h1 class="article__heading">Shift the overall look and feel by adding these wonderful
+          touches to furniture in your home</h1>
+        <p class="article__text"> Ever been in a room and felt like something was missing? Perhaps
+          it felt slightly bare and uninviting. I've got some simple tips
+          to help you make any room feel complete.</p>
 
-  Ever been in a room and felt like something was missing? Perhaps
-  it felt slightly bare and uninviting. I’ve got some simple tips
-  to help you make any room feel complete.
+        <footer class="article__footer">
+          <div class="user">
+            <img src="images/avatar-michelle.jpg" alt="" class="user__img">
+            <div class="user__content">
+              <h2 class="user__name">
+                Michelle Appleton
+              </h2>
+              <time class="user__date"> 28 Jun 2020</time>
+            </div>
+          </div>
+          <i class="fa-solid fa-share icon__share"></i>
 
-  Michelle Appleton
-  28 Jun 2020
+          <div class="tooltip">
+            <p class="tooltip__text">Share</p>
+            <i class="fa-brands fa-square-facebook tooltip__icon"></i>
+            <i class="fa-brands fa-twitter tooltip__icon"></i>
+            <i class="fa-brands fa-pinterest tooltip__icon"></i>
+          </div>
+        </footer>
+      </div>
+
+    </article>
+  </main>
+  <!-- 
+
+
+
+
+
 
   Share -->
 
