Javascript : add aniamtion upon clicking on share button

--- a/15-article-preview/index.html
+++ b/15-article-preview/index.html
@@ -38,7 +38,8 @@
               <time class="user__date"> 28 Jun 2020</time>
             </div>
           </div>
-          <i class="fa-solid fa-share icon__share"></i>
+          <a href="#" id="link-share"> <i class="fa-solid fa-share icon__share"></i></a>
+
 
           <div class="tooltip">
             <p class="tooltip__text">Share</p>
@@ -51,16 +52,9 @@
 
     </article>
   </main>
-  <!-- 
 
 
-
-
-
-
-  Share -->
-
-
+  <script src="app.js"></script>
 </body>
 
 </html>
