--- a/16-four-cards/index.html
+++ b/16-four-cards/index.html
@@ -12,11 +12,18 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- Reliable, efficient delivery
-  Powered by Technology
+    <main>
+      <section class="hero">
+        <p class="hero__subheading">Reliable, efficient delivery</p>
+        <h1 class="hero__heading"> Powered by Technology</h1>
+        <p class="hero__text">  Our Artificial Intelligence powered tools use millions of project data points 
+          to ensure that your project is successful</p>
+      </section>
+    </main>
+    <!-- 
+ 
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+
 
   Supervisor
   Monitors activity to identify project roadblocks
