--- a/16-four-cards/index.html
+++ b/16-four-cards/index.html
@@ -9,32 +9,50 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
     <title>Frontend Mentor | Four card feature section</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
       <section class="hero">
         <p class="hero__subheading">Reliable, efficient delivery</p>
-        <h1 class="hero__heading"> Powered by Technology</h1>
-        <p class="hero__text">  Our Artificial Intelligence powered tools use millions of project data points 
-          to ensure that your project is successful</p>
+        <h1 class="hero__heading">Powered by Technology</h1>
+        <p class="hero__text">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+      </section>
+
+      <section class="cards">
+        <div class="card card--cyan">
+          <h2 class="card__heading">Supervisor</h2>
+          <p class="card__text">Supervisor Monitors activity to identify project roadblocks</p>
+          <img src="images/icon-supervisor.svg" alt="" class="card__img" />
+        </div>
+
+        <div class="card card--red">
+          <h2 class="card__heading">Team Builder</h2>
+          <p class="card__text">Scans our talent network to create the optimal team for your project</p>
+          <img src="images/icon-team-builder.svg" alt="" class="card__img" />
+        </div>
+
+        <div class="card card--orange">
+          <h2 class="card__heading">Karma</h2>
+          <p class="card__text">Regularly evaluates our talent to ensure quality</p>
+          <img src="images/icon-karma.svg" alt="" class="card__img" />
+        </div>
+
+        <div class="card card--blue">
+          <h2 class="card__heading">Calculator</h2>
+          <p class="card__text">Uses data from past projects to provide better delivery estimates</p>
+          <img src="images/icon-calculator.svg" alt="" class="card__img" />
+        </div>
       </section>
     </main>
+
     <!-- 
- 
 
 
 
-  Supervisor
-  Monitors activity to identify project roadblocks
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
 
-  Karma
-  Regularly evaluates our talent to ensure quality
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates -->
-  </body>
+
+  --></body>
 </html>
