--- a/16-four-cards/index.html
+++ b/16-four-cards/index.html
@@ -23,25 +23,25 @@
         <div class="card card--cyan">
           <h2 class="card__heading">Supervisor</h2>
           <p class="card__text">Supervisor Monitors activity to identify project roadblocks</p>
-          <img src="images/icon-supervisor.svg" alt="" class="card__img" />
+          <img src="images/icon-supervisor.svg" alt="" class="card__img"  width="64" height="64" />
         </div>
 
         <div class="card card--red up">
           <h2 class="card__heading">Team Builder</h2>
           <p class="card__text">Scans our talent network to create the optimal team for your project</p>
-          <img src="images/icon-team-builder.svg" alt="" class="card__img" />
+          <img src="images/icon-team-builder.svg" alt="" class="card__img" width="64" height="64" />
         </div>
 
         <div class="card card--orange up">
           <h2 class="card__heading">Karma</h2>
           <p class="card__text">Regularly evaluates our talent to ensure quality</p>
-          <img src="images/icon-karma.svg" alt="" class="card__img" />
+          <img src="images/icon-karma.svg" alt="" class="card__img" width="64" height="64" />
         </div>
 
-        <div class="card card--blue ">
+        <div class="card card--blue">
           <h2 class="card__heading">Calculator</h2>
           <p class="card__text">Uses data from past projects to provide better delivery estimates</p>
-          <img src="images/icon-calculator.svg" alt="" class="card__img" />
+          <img src="images/icon-calculator.svg" alt="" class="card__img"  width="64" height="64"/>
         </div>
       </section>
     </main>
