add alt to the drawer image

--- a/15-article-preview/index.html
+++ b/15-article-preview/index.html
@@ -15,7 +15,7 @@
   <body>
     <main>
       <article class="article">
-        <img src="images/drawers.jpg" alt="" class="article__img" width="285" height="296" />
+        <img src="images/drawers.jpg" alt="Drawer with some decorative items above it" class="article__img" width="285" height="296" />
         <div class="article__content">
           <h1 class="article__heading">Shift the overall look and feel by adding these wonderful touches to furniture in your home</h1>
           <p class="article__text">Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. I've got some simple tips to help you make any room feel complete.</p>
