--- a/17-base-apparel/index.html
+++ b/17-base-apparel/index.html
@@ -23,9 +23,11 @@
           <!-- <label for="email" class="hero__label"> Emaill Address </label>
           <input type="email" class="hero__input" name="email" id="email" /> -->
           <div class="did-floating-label-content">
-            <input class="did-floating-input form__input" type="text" placeholder=" ">
+            <input class="did-floating-input form__input" type="email" placeholder=" ">
             <label class="did-floating-label">Email Address</label>
             <img src="images/icon-arrow.svg" class="form__arrow" alt="">
+            <img src="images/icon-error.svg" alt="" class="error__icon">
+            <p class="error">Please provide a valid email</p>
           </div>
           
         </form>
@@ -35,10 +37,6 @@
     </main>
 
 
-    <!--  
-
-
-
-  Email Address -->
+    <script src="app.js"></script>
   </body>
 </html>
