--- a/18-sign-up-intro/index.html
+++ b/18-sign-up-intro/index.html
@@ -26,21 +26,25 @@
             <div class="form-floating mb-3">
               <input type="text" class="form-control" id="firstname" placeholder="First Name" />
               <label for="firstname" class="form__label">first name</label>
+              <img class="error__icon" src="images/icon-error.svg" alt="">
               <p id="firstname-error" class="form__error">First Name cannot be empty</p>
             </div>
             <div class="form-floating mb-3">
               <input type="text" class="form-control" id="lastname" placeholder="Last Name" />
               <label for="lastname">last name</label>
+              <img class="error__icon" src="images/icon-error.svg" alt="">
               <p id="lastname-error" class="form__error">Last Name cannot be empty</p>
             </div>
             <div class="form-floating mb-3">
               <input type="email" class="form-control" id="email" placeholder="Email Address" />
               <label for="email">email address</label>
+              <img class="error__icon" src="images/icon-error.svg" alt="">
               <p id="email-error" class="form__error">Looks like this is not an email</p>
             </div>
             <div class="form-floating mb-3">
               <input type="password" class="form-control" id="password" placeholder="Password" />
               <label for="password">password</label>
+              <img class="error__icon" src="images/icon-error.svg" alt="">
               <p id="password-error" class="form__error">Password cannot be empty</p>
             </div>
             <div class="form__field">
