--- a/19-single-price-grid/index.html
+++ b/19-single-price-grid/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
     <title>Frontend Mentor | Single Price Grid Component</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- Join our community
