finish mobile design

--- a/19-single-price-grid/index.html
+++ b/19-single-price-grid/index.html
@@ -9,32 +9,34 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
     <title>Frontend Mentor | Single Price Grid Component</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Join our community
+    <main>
+      <section class="hero">
+        <h1 class="hero__heading">Join our community</h1>
+        <h2 class="hero__subheading">30-day, hassle-free money back guarantee</h2>
+        <p class="hero__text">Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
 
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week -->
+      </section>
+      <section class="money">
+        <h2 class="money__heading">Monthly Subscription</h2>
+        <p class="money__price">$29 <span class="money__small">per month</span></p>
+        <p class="money__text">Full access for less than &dollar;1 a day</p>
+        <button class="money__button">Sign Up</button>
+      </section>
+      <section class="why">
+        <h2 class="why__heading">Why Us</h2>
+        <ul class="why__list">
+          <li class="why__item">Tutorials by industry experts</li>
+          <li class="why__item">Peer &amp; expert code review</li>
+          <li class="why__item">Coding exercises</li>
+          <li class="why__item">Access to our GitHub repos</li>
+          <li class="why__item">Community forum</li>
+          <li class="why__item">Flashcard decks</li>
+          <li class="why__item">New videos every week</li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
