finish mobile design

--- a/20-ping-single-page/index.html
+++ b/20-ping-single-page/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Front End Mentor Project 20 :  Ping Coming Soon Page " />
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <script src="https://kit.fontawesome.com/75016b0d3c.js" crossorigin="anonymous"></script>
 
     <title>Frontend Mentor | Ping coming soon page</title>
     <link rel="stylesheet" href="style.css" />
@@ -23,14 +24,19 @@
         <img src="images/illustration-dashboard.png" alt="" class="hero__img" />
         <footer class="hero__footer">
           <ul class="footer__list">
-            <li class="footer__item"><i class="footer__icon"></i></li>
-            <li class="footer__item"><i class="footer__icon"></i></li>
-            <li class="footer__item"><i class="footer__icon"></i></li>
+            <li class="footer__item">
+              <a href="#" class="footer__link"><i class="fa-brands fa-facebook-f footer__icon"></i></a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link"><i class="fa-brands fa-twitter footer__icon"></i></a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link"><i class="fa-brands fa-instagram footer__icon"></i></a>
+            </li>
           </ul>
           <p class="footer__text">&copy; Copyright Ping. All rights reserved.</p>
         </footer>
       </section>
     </main>
-   
   </body>
 </html>
