add form validation via javascript

--- a/20-ping-single-page/index.html
+++ b/20-ping-single-page/index.html
@@ -20,9 +20,12 @@
         <p class="hero__text">Subscribe and get notified</p>
 
         <div class="action__container">
-          <input type="email" class="hero__input" placeholder="Your emaill address..." />
-          <p class="input__error">Please provide a valid email address</p>
-          <button class="hero__button">Notify Me</button>
+          <form  class="hero__form">
+            <input type="email" class="hero__input" placeholder="Your emaill address..." />
+            <p class="input__error">Please provide a valid email address</p>
+            <button class="hero__button">Notify Me</button>
+          </form>
+       
         </div>
 
         <img src="images/illustration-dashboard.png" alt="" class="hero__img" />
@@ -42,5 +45,6 @@
         </footer>
       </section>
     </main>
+    <script src="app.js"></script>
   </body>
 </html>
