--- a/20-ping-single-page/index.html
+++ b/20-ping-single-page/index.html
@@ -20,27 +20,27 @@
         <p class="hero__text">Subscribe and get notified</p>
 
         <div class="action__container">
-          <form  class="hero__form">
+          <form class="hero__form">
             <input type="email" class="hero__input" placeholder="Your emaill address..." />
             <p class="input__error">Please provide a valid email address</p>
             <button class="hero__button">Notify Me</button>
           </form>
-       
         </div>
 
-        <img src="images/illustration-dashboard.png" alt="" class="hero__img" />
+        <img src="images/illustration-dashboard.png" alt="" class="hero__img" width="600" height="366" />
         <footer class="hero__footer">
           <ul class="footer__list">
             <li class="footer__item">
-              <a href="#" class="footer__link"><i class="fa-brands fa-facebook-f footer__icon"></i></a>
+              <a href="#" class="footer__link" aria-label="Facebook" title="Go to Facebook page"><i class="fa-brands fa-facebook-f footer__icon"></i></a>
             </li>
             <li class="footer__item">
-              <a href="#" class="footer__link"><i class="fa-brands fa-twitter footer__icon"></i></a>
+              <a href="#" class="footer__link" aria-label="Twitter" title="Go to Twitter page"><i class="fa-brands fa-twitter footer__icon"></i></a>
             </li>
             <li class="footer__item">
-              <a href="#" class="footer__link"><i class="fa-brands fa-instagram footer__icon"></i></a>
+              <a href="#" class="footer__link" aria-label="Instagram" title="Go to Instagram page"><i class="fa-brands fa-instagram footer__icon"></i></a>
             </li>
           </ul>
+
           <small class="footer__text">&copy; Copyright Ping. All rights reserved.</small>
         </footer>
       </section>
