--- a/21-huddle-landing/index.html
+++ b/21-huddle-landing/index.html
@@ -9,13 +9,36 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
     <title>Frontend Mentor | Huddle landing page with single introductory section</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Build The Community Your Fans Will Love
+    <main>
+      <section class="hero">
+        <img src="images/logo.svg" alt="" class="hero__logo" width="120" height="30" />
+        <img src="images/illustration-mockups.svg" alt="" class="hero__img" />
+        <div class="hero__content">
+          <h1 class="hero__heading">Build The Community Your Fans Will Love</h1>
+          <p class="hero__text">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+          <button class="hero__button">Register</button>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a href="#" class="footer__link"><i class="footer__icon"></i></a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link"><i class="footer__icon"></i></a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link"><i class="footer__icon"></i></a>
+        </li>
+      </ul>
+    </footer>
+    <!--
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+
 
   Register -->
   </body>
