finish mobile design

--- a/21-huddle-landing/index.html
+++ b/21-huddle-landing/index.html
@@ -6,6 +6,8 @@
 
     <meta name="description" content="Front End Mentor Project 21 :  Huddle Landing Page With Single Introductory Section " />
 
+    <script src="https://kit.fontawesome.com/75016b0d3c.js" crossorigin="anonymous"></script>
+
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
     <title>Frontend Mentor | Huddle landing page with single introductory section</title>
@@ -23,16 +25,16 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <ul class="footer__list">
         <li class="footer__item">
-          <a href="#" class="footer__link"><i class="footer__icon"></i></a>
+          <a href="#" class="footer__link" aria-label="Facebook" title="Go to Facebook page"><i class="fa-brands fa-facebook-f footer__icon"></i></a>
         </li>
         <li class="footer__item">
-          <a href="#" class="footer__link"><i class="footer__icon"></i></a>
+          <a href="#" class="footer__link" aria-label="Twitter" title="Go to Twitter page"><i class="fa-brands fa-twitter footer__icon"></i></a>
         </li>
         <li class="footer__item">
-          <a href="#" class="footer__link"><i class="footer__icon"></i></a>
+          <a href="#" class="footer__link" aria-label="Instagram" title="Go to Instagram page"><i class="fa-brands fa-instagram footer__icon"></i></a>
         </li>
       </ul>
     </footer>
