HTML validator, Lighthouse, Axe Tests

--- a/21-huddle-landing/index.html
+++ b/21-huddle-landing/index.html
@@ -17,7 +17,7 @@
     <main>
       <img src="images/logo.svg" alt="" class="hero__logo" width="120" height="30" />
       <section class="hero">
-        <img src="images/illustration-mockups.svg" alt="" class="hero__img" />
+        <img src="images/illustration-mockups.svg" alt="" class="hero__img" width="700" height="500" />
         <div class="hero__content">
           <h1 class="hero__heading">Build The Community Your Fans Will Love</h1>
           <p class="hero__text">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
