--- a/2-junior-projects/01-newsletter-signup-form/index.html
+++ b/2-junior-projects/01-newsletter-signup-form/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
 
     <title>Frontend Mentor | Newsletter sign-up form with success message</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- Sign-up form start -->
