--- a/2-junior-projects/01-newsletter-signup-form/index.html
+++ b/2-junior-projects/01-newsletter-signup-form/index.html
@@ -8,12 +8,29 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
 
     <title>Frontend Mentor | Newsletter sign-up form with success message</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Sign-up form start -->
+    <main>
+      <article class="hero">
+        <div class="hero__content">
+          <h1 class="hero__heading">Stay updated!</h1>
+          <p class="hero__text">Join 60,000+ product managers receiving monthly updates on</p>
+          <ul class="hero__list">
+            <li class="hero__item">Product discovery and building what matters</li>
+            <li class="hero__item">Measuring to ensure updates are a success</li>
+            <li class="hero__item">And much more!</li>
+          </ul>
+          <form class="hero__form">
+            <label for="email" class="form__label"></label>
+            <input type="text" class="form__input" id="email" placeholder="email@company.com" />
+            <button class="btn">Subscribe to monthly newsletter</button>
+          </form>
+        </div>
+      </article>
+    </main>
 
-    <!-- Stay updated! Join 60,000+ product managers receiving monthly updates on: Product discovery and building what matters Measuring to ensure updates are a success And much more! Email address email@company.com Subscribe to monthly newsletter -->
+    <!-- :  M  Email address email@company.com S -->
 
     <!-- Sign-up form end -->
 
